<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/BloxScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        style="@style/BloxTitle" />

    <TextView
        android:id="@+id/settings_threshold_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_threshold_value_default"
        style="@style/BloxBody" />

    <tatar.eljah.recorder.PitchOverlayView
        android:id="@+id/settings_spectrogram"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="8dp"
        style="@style/BloxGraphPanel" />

    <tatar.eljah.recorder.IntensityGraphView
        android:id="@+id/settings_intensity_graph"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="8dp"
        style="@style/BloxGraphPanel" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_hint"
        style="@style/BloxMuted" />

</LinearLayout>
